--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     compile "org.apache.commons:commons-math3:3.6.1"
     compile "net.objecthunter:exp4j:0.4.8"
     compile "org.slf4j:slf4j-simple:1.7.25"
+
+    compile 'org.reflections:reflections:0.9.11'
+
+    testCompile "junit:junit:4.12"
 }
